--- a/Auth-Service/src/main/resources/application.properties
+++ b/Auth-Service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Auth-Service
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/auth
+spring.datasource.url= jdbc:postgresql://localhost:5432/product
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username= postgres
 spring.datasource.password=vvrt5zZ15
@@ -9,4 +9,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-server.port=8081
+server.port=8086
